# usaco_solutions

./: .gitignore  CMakeLists.txt  README  gift1.cc  ride.cc  test.cpp
src/: TEMPLATE
src/session1/: CMakeLists.txt  ariprog.cc  barn1.cc  beads.cc  combo.cc  crypt1.cc  dualpal.cc  friday.cc  milk.cc  milk2.cc  milk3.cc  namenum.cc  numtri.cc  palsquare.cc  pprime.cc  sprime.cc  transform.cc
